--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "node postgres monorepo",
   "main": "index.js",
   "private": true,
-  "repository": "git@github.com:brianc/node-postgres.git",
+  "repository": "git@github.com:MedFlyt/node-postgres.git",
   "author": "Brian M. Carlson <brian.m.carlson@gmail.com>",
   "license": "MIT",
   "workspaces": [
@@ -18,6 +18,7 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}'"
   },
   "devDependencies": {
+    "@types/node": "^17.0.36",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "eslint": "^7.11.0",
