--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "lerna": "^3.19.0",
+    "@octokit/core":"^3.0.0",
     "prettier": "2.1.2",
-    "typescript": "^4.0.3"
+    "typescript": "4.3.5"
   },
   "prettier": {
     "semi": false,
