--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     strategy:
       matrix:
-        node: ['12', '14', '16', '18']
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        node: ['12',  '16', '18']
+        os: [ubuntu-latest,  macos-latest]
     name: Node.js ${{ matrix.node }} (${{ matrix.os }})
     steps:
       - uses: actions/checkout@v3
