--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ build/
 node_modules/
 package-lock.json
 *.swp
-dist
+packages/pg/dist/
+packages/pg-cursor/dist/
+packages/pg-query-stream/dist/
 .DS_Store
 .vscode/
 manually-test-on-heroku.js
