--- a/packages/pg-query-stream/package.json
+++ b/packages/pg-query-stream/package.json
@@ -32,7 +32,7 @@
     "@types/chai": "^4.2.13",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.0.0",
-    "@types/pg": "^7.14.5",
+    "@types/pg": "8.6.5",
     "JSONStream": "~0.7.1",
     "concat-stream": "~1.0.1",
     "eslint-plugin-promise": "^3.5.0",
@@ -40,7 +40,7 @@
     "pg": "^8.7.3",
     "stream-spec": "~0.3.5",
     "ts-node": "^8.5.4",
-    "typescript": "^4.0.3"
+    "typescript": "4.3.5"
   },
   "dependencies": {
     "pg-cursor": "^2.7.3"
